--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@next/font": "^13.5.4",
     "@next/mdx": "^13.5.4",
     "@upstash/redis": "^1.23.3",
+    "@vercel/blob": "^0.23.3",
     "contentlayer": "^0.3.4",
     "framer-motion": "^10.18.0",
     "lucide-react": "^0.284.0",
